My POrg/src/objects/Object_2__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instructor_Number__c</fullName>
        <label>Instructor_Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>RPAD(&apos;103&apos;,14-LEN(Instructor_Number__c),&apos;0&apos;)+Instructor_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test</label>
        <type>Text</type>
    </fields>
    <label>Object 2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object 2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>